--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
     <title>BOX IN A BOX</title>
 </head>
 <body>
-    <main style="width: 60%; margin-left: 20%; margin-top: 2%; display:inline-block; border: 3px solid black;">
-        <div style="width: auto; height: 60px; margin: 10px; border: 3px solid red;">
-            <div style="border: 3px solid red; width: 25%; height: 34px; margin: 10px; float: left;"></div>
-            <div style="border: 3px solid red; width: 46%; height: 34px; margin: 10px; ; float: right;"></div>
+    <main style="width: 60%; height: 760px; margin-left: 20%; margin-top: 2%; display:inline-block; border: 3px solid black;">
+        <div style="width: 97%; display: inline-block; margin: 1%; border: 3px solid red;">
+            <div style="border: 3px solid red; width: 25%; height: 34px; margin: 1%; float: left;"></div>
+            <div style="border: 3px solid red; width: 46%; height: 34px; margin: 1%; ; float: right;"></div>
         </div>
-        <div style="width: auto; height: 320px; margin: 10px; border: 3px solid red;">
-            <div style="border: 3px solid red; width: 47.4%; height: 294px; margin: 10px; float: left;">
-                <div style="border: 3px solid red; width: 70%; height: 27%; margin: 10px; float: left;"></div>
-                <div style="border: 3px solid red; width: 70%; height: 27%; margin-right: 10px; float: right;"></div>
-                <div style="border: 3px solid red; width: 70%; height: 27%; margin: 10px; float: left;"></div>
+        <div style="width: auto; height: 40%; margin: 1%; border: 3px solid red;">
+            <div style="border: 3px solid red; width: 47.4%; height: 94%; margin: 1%; float: left;">
+                <div style="border: 3px solid red; width: 70%; height: 27%; margin: 1%; float: left;"></div>
+                <div style="border: 3px solid red; width: 70%; height: 27%; margin-right: 1%; float: right;"></div>
+                <div style="border: 3px solid red; width: 70%; height: 27%; margin: 1%; float: left;"></div>
             </div>
-            <div style="border: 3px solid red; width: 47.4%; height: 294px; margin-top: 10px; margin-bottom: 10px; margin-right: 10px; float: right;">
-                <div style="border: 3px solid red; width: 70%; height: 27%; margin: 10px; float: right;"></div>
-                <div style="border: 3px solid red; width: 38%; height: 27%; margin-left: 10px; float: left;"></div>
-                <div style="border: 3px solid red; width: 50%; height: 27%; margin-right: 10px; float: right;"></div>
-                <div style="border: 3px solid red; width: 70%; height: 27%; margin: 10px; float: left;"></div>
+            <div style="border: 3px solid red; width: 47.4%; height: 94%; margin-top: 1%; margin-bottom: 1%; margin-right: 1%; float: right;">
+                <div style="border: 3px solid red; width: 70%; height: 27%; margin: 1%; float: right;"></div>
+                <div style="border: 3px solid red; width: 38%; height: 27%; margin-left: 1%; float: left;"></div>
+                <div style="border: 3px solid red; width: 50%; height: 27%; margin-right: 1%; float: right;"></div>
+                <div style="border: 3px solid red; width: 70%; height: 27%; margin: 1%; float: left;"></div>
             </div>
         </div>
-        <div style="width: auto; height: 240px; margin: 10px; margin-bottom: 60px; border: 3px solid red;">
-            <div style="border: 3px solid red; width: 35%; height: 215px; margin: 10px; float: left;"></div>
-            <div style="border: 3px solid red; width: 35%; height: 215px; margin: 10px; ; float: right;"></div>
+        <div style="width: auto; height: 35%; margin: 1%; margin-bottom: 60px; border: 3px solid red;">
+            <div style="border: 3px solid red; width: 35%; height: 90%; margin: 1%; float: left;"></div>
+            <div style="border: 3px solid red; width: 35%; height: 90%; margin: 1%; ; float: right;"></div>
         </div>
     </main>
 </body>
