--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
     <main style="width: 60%; height: 760px; margin-left: 20%; margin-top: 2%; display:inline-block; border: 3px solid black;">
         <div style="width: 97%; display: inline-block; margin: 1%; border: 3px solid red;">
             <div style="border: 3px solid red; width: 25%; height: 34px; margin: 1%; float: left;"></div>
-            <div style="border: 3px solid red; width: 46%; height: 34px; margin: 1%; ; float: right;"></div>
+            <div style="border: 3px solid red; width: 45%; height: 34px; margin: 1%; ; float: right;"></div>
         </div>
-        <div style="width: auto; height: 40%; margin: 1%; border: 3px solid red;">
-            <div style="border: 3px solid red; width: 47.4%; height: 94%; margin: 1%; float: left;">
-                <div style="border: 3px solid red; width: 70%; height: 27%; margin: 1%; float: left;"></div>
-                <div style="border: 3px solid red; width: 70%; height: 27%; margin-right: 1%; float: right;"></div>
-                <div style="border: 3px solid red; width: 70%; height: 27%; margin: 1%; float: left;"></div>
+        <div style="width: 97%; height: 40%; margin: 1%; border: 3px solid red; display: inline-block;">
+            <div style="border: 3px solid red; width: 43%; height: 90%; margin: 1%; float: left; padding: 1%;">
+                <div style="border: 3px solid red; width: 70%; height: 29%; float: left;"></div>
+                <div style="border: 3px solid red; width: 70%; height: 29%; float: right; margin-top: 2%; margin-bottom: 2%;"></div>
+                <div style="border: 3px solid red; width: 70%; height: 29%; float: left;"></div>
             </div>
-            <div style="border: 3px solid red; width: 47.4%; height: 94%; margin-top: 1%; margin-bottom: 1%; margin-right: 1%; float: right;">
-                <div style="border: 3px solid red; width: 70%; height: 27%; margin: 1%; float: right;"></div>
-                <div style="border: 3px solid red; width: 38%; height: 27%; margin-left: 1%; float: left;"></div>
-                <div style="border: 3px solid red; width: 50%; height: 27%; margin-right: 1%; float: right;"></div>
-                <div style="border: 3px solid red; width: 70%; height: 27%; margin: 1%; float: left;"></div>
+            <div style="border: 3px solid red; width: 43%; height: 90%; margin-top: 1%; margin-bottom: 1%; margin-right: 1%; float: right; padding: 1%;">
+                <div style="border: 3px solid red; width: 70%; height: 29%; float: right;"></div>
+                <div style="border: 3px solid red; width: 35%; height: 29%; float: left; margin-top: 2%; margin-bottom: 2%;"></div>
+                <div style="border: 3px solid red; width: 50%; height: 29%; float: right; margin-top: 2%; margin-bottom: 2%;"></div>
+                <div style="border: 3px solid red; width: 70%; height: 29%; float: left;"></div>
             </div>
         </div>
-        <div style="width: auto; height: 35%; margin: 1%; margin-bottom: 60px; border: 3px solid red;">
+        <div style="width: 97%; height: 35%; margin: 1%; margin-bottom: 20%; border: 3px solid red;">
             <div style="border: 3px solid red; width: 35%; height: 90%; margin: 1%; float: left;"></div>
             <div style="border: 3px solid red; width: 35%; height: 90%; margin: 1%; ; float: right;"></div>
         </div>
