--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
     <title>BOX IN A BOX</title>
 </head>
 <body>
-    <main style="width: 60%; height: 760px; margin-left: 20%; margin-top: 2%; display:inline-block; border: 3px solid black;">
+    <main style="width: 60%; height: 760px; margin-left: 20%; margin-top: 2%; display:inline-block; border: 3px solid black; padding: 1%;">
         <div style="width: 97%; display: inline-block; margin: 1%; border: 3px solid red;">
             <div style="border: 3px solid red; width: 25%; height: 34px; margin: 1%; float: left;"></div>
             <div style="border: 3px solid red; width: 45%; height: 34px; margin: 1%; ; float: right;"></div>
         </div>
         <div style="width: 97%; height: 40%; margin: 1%; border: 3px solid red; display: inline-block;">
-            <div style="border: 3px solid red; width: 43%; height: 90%; margin: 1%; float: left; padding: 1%;">
+            <div style="border: 3px solid red; width: 43%; height: 87%; margin: 1%; float: left; padding: 1%;">
                 <div style="border: 3px solid red; width: 70%; height: 29%; float: left;"></div>
                 <div style="border: 3px solid red; width: 70%; height: 29%; float: right; margin-top: 2%; margin-bottom: 2%;"></div>
                 <div style="border: 3px solid red; width: 70%; height: 29%; float: left;"></div>
             </div>
-            <div style="border: 3px solid red; width: 43%; height: 90%; margin-top: 1%; margin-bottom: 1%; margin-right: 1%; float: right; padding: 1%;">
+            <div style="border: 3px solid red; width: 43%; height: 87%; margin-top: 1%; margin-bottom: 1%; margin-right: 1%; float: right; padding: 1%;">
                 <div style="border: 3px solid red; width: 70%; height: 29%; float: right;"></div>
-                <div style="border: 3px solid red; width: 35%; height: 29%; float: left; margin-top: 2%; margin-bottom: 2%;"></div>
-                <div style="border: 3px solid red; width: 50%; height: 29%; float: right; margin-top: 2%; margin-bottom: 2%;"></div>
+                <div style="border: 3px solid red; width: 35%; height: 29%; float: left; margin-top: 2%; margin-bottom: 2%; margin-right: 0.5%;"></div>
+                <div style="border: 3px solid red; width: 50%; height: 29%; float: right; margin-top: 2%; margin-bottom: 2%; margin-left: 0.5%;"></div>
                 <div style="border: 3px solid red; width: 70%; height: 29%; float: left;"></div>
             </div>
         </div>
